This file documents the revision history for mod_gearman.

5.1.2 Thu Jun 29 11:02:35 CEST 2023
          - neb: add internal check_dummy
          - change pid file location to /run in packages

5.1.1 Wed Jun 21 14:57:30 CEST 2023
          - neb: fix gearmand memory leak (#167)
          - gearman_top: fix extracting gearmand version
          - fix base64 decode errors if source contains newlines

5.1.0 Wed Mar  8 08:24:27 CET 2023
          - reopen logfile after core rotation
          - add latency_flatten_window option

5.0.2 Sun Feb  5 19:05:17 CET 2023
          - fix crash when using multiple result worker in neb module

5.0.1 Fri Jan 27 16:21:36 CET 2023
          - fix accepting passive plaintext results

5.0.1 Fri Jan 27 16:21:36 CET 2023
          - fix memory corruption during decryption

5.0.0 Wed Jan 11 11:49:36 CET 2023
          - switch to openssl for all aes/base64 and digest functions

4.0.3 Wed Aug 24 10:48:50 CEST 2022
          - add 'log_stats_interval' option
          - add support for check_gearman checking result queue worker / core statistics
          - set default connection timeout to 5 seconds
          - improve neb module performance
            - use non-blocking io

4.0.2 Tue Jun  7 16:42:57 CEST 2022
          - improve/unify worker/client cleanup
          - fix potential crash during shutdown

4.0.1 Tue Mar 15 09:52:14 CET 2022
          - fix debian packaging

4.0.0 Fri Mar 11 16:14:37 CET 2022
          - drop nagios 3, nagios 4 and icinga 1 support
          - improve check results handling performance
          - add support for multiple result_workers
          - fix crash if gearmand is unreachable
          - fix host acknowledgement notification author macros

3.3.3 Tue Sep  1 11:30:47 CEST 2020
          - fix calculating uniq string

3.3.2 Wed Aug 19 16:19:35 CEST 2020
          - use base64 encoded uniq idendifiers
          - gearman_top: read address:port from env variable CONFIG_GEARMAND_PORT (#153)
